--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
                 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
                 <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.min.css">
                 <link rel="stylesheet" type="text/css" media="screen" href="css/smartadmin-production.css">
+                <link rel='stylesheet' type='text/css' href="css/bootstrap.css"/>
+        <link rel='stylesheet' type='text/css' href="css/font-awesome.css"/>
+        <link rel='stylesheet' type='text/css' href="css/animate.css"/>
+        <link rel='stylesheet' type='text/css' href="css/job_offer_style.css"/>
                 <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="img/favicon/favicon.ico" type="image/x-icon">
 		<script src="js/jquery-2.0.2.min.js"></script>
