--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             }
             
             function download(){
-                window.open("http://appnlogic.com/wave/jo_classi.Pdf", '_system', 'location=yes');
+                window.open("http://joboffer.co.in/jo_classi.Pdf", '_system', 'location=yes');
                //http://joboffer.co.in/demo/jo_classi.Pdf
             }
             
